--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "jquery": "^3.5.1",
+    "sass": "^1.49.8",
     "sass-resources-loader": "^2.0.3",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11"
