--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material/button": "^6.0.0",
     "@material/textfield": "^6.0.0",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-datalabels": "^1.0.0",
     "core-js": "^3.6.5",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
